fix modal img squishing taller-than-screen images width defined width

--- a/_modalFW.scss
+++ b/_modalFW.scss
@@ -80,7 +80,7 @@
   .ready &{visibility: visible; opacity: 1;}
   .modalFW--img &{padding: 0;
     &:after{@include pseudo(); @include size(100%,100%);top: 0;left: 0; z-index: 1;opacity: 0.2; background: radial-gradient(transparent 40%, #111414), rgba(0, 0, 0, 0.01); pointer-events: none;}
-    img{max-height: 85vh;}
+    img{max-height: 85vh; width: auto;}
   }
   &>*:last-child{margin-bottom: 0;}
   .modalFW.no-bg &{padding: 0rem 2rem 2rem;}
